objects/Direct_Mail_Receipt_Template__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Direct Mail Receipt Templates</relationshipLabel>
        <relationshipName>Direct_Mail_Receipt_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Envelope_Type__c</fullName>
        <label>Envelope Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>DLX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Header_Image__c</fullName>
        <label>Header Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Maximum_Donation__c</fullName>
        <label>Maximum Donation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Donation__c</fullName>
        <label>Minimum Donation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receipt_Body_Text__c</fullName>
        <label>Receipt Body Text</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Direct Mail Receipt Template</label>
    <nameField>
        <label>Direct Mail Receipt Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Direct Mail Receipt Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>